--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
     /* outline: none; */
     outline-offset: 3px;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: Roboto,sans-serif;
     font-size: 16px;
